--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- PROD-SHIM-MIN-JS -->
 
+  <!-- PROD-ZONE-JS -->
+  
   <!-- Google Analytics -->
   <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
