MOB-525: Angular update - version 4 to version 5

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,11 @@
   <!-- End Google Analytics -->  
 
   <script type="text/javascript" src="libs/js/mobileticket-1.0.1.js"></script>
+  <script type="text/javascript" src="libs/js/intlTelInput.min.js"></script>
   <!-- MOBILE-TICKET-MIN-JS -->
 
   <link rel="stylesheet" href="libs/css/bootstrap.min.css">
+  <link rel="stylesheet" href="libs/css/intlTelInput.css">
   <link href="app/theme/theme-styles.css" rel="stylesheet">
 
   <style>
