--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 
   <script type="text/javascript" src="libs/js/mobileticket-1.0.1.js"></script>
   <script type="text/javascript" src="libs/js/intlTelInput.min.js"></script>
+  <script type="text/javascript" src="libs/js/utils.js"></script>
   <!-- MOBILE-TICKET-MIN-JS -->
 
   <link rel="stylesheet" href="libs/css/bootstrap.min.css">
